--- a/src/assets/components/CompareAlgorithms.css
+++ b/src/assets/components/CompareAlgorithms.css
@@ -101,7 +101,7 @@
     position: absolute;
     z-index: 9999999;
     width: calc(100% - 90px);
-    background-color: #333333;
+    background-color: #eee;
     max-height: 155px;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -115,7 +115,7 @@
 }
 
 .compare-algorithms-card .previous-array:hover {
-    background-color: #444444;
+    background-color: #d1d1d1;
 }
 
 .sort-anim-wrapper {
@@ -180,5 +180,13 @@
 
     .compare-algorithms-card button:hover {
         background: #0056b3;
+    }
+
+    .compare-algorithms-card .previous-arrays {
+        background-color: #333333;
+    }
+
+    .compare-algorithms-card .previous-array:hover {
+        background-color: #444444;
     }
 }
